add spin button

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <title>Wheel of Fortune</title>
   </head>
   <body>
-
+    <p>Placeholder text</p>
+    <form id="letterEntryForm">
+      <div class="form-group">
+        <label for="letterEntryInput">Enter a letter</label>
+        <input type="text" class="form-control" required id="letterEntryInput">
+        <button type="submit" class="btn btn-success">Submit</button>
+      </div>
+    </form>
+    <button class="btn btn-primary" id="spin" type="button" name="button">Spin!</button>
   </body>
 </html>
