run lettercheck on player letter guesses and debug functions

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
           <label for="letterEntryInput">Enter a letter</label>
           <input type="text" class="form-control" required id="letterEntryInput">
           <button type="submit" class="btn btn-success">Submit</button>
+          <button id="solvePuzzle" class="btn btn-primary" type="button" name="button">I'd like to solve the puzzle!</button>
         </div>
       </form>
     </div>
