add score board, currently displaying one sample answer. line breaks mid word at 15th character

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <title>Wheel of Fortune</title>
   </head>
   <body>
+    <form id="displayBoard" action="index.html" method="post">
+    </form>
     <div class="container">
       <h1>Wheel of Fortune!</h1>
+
       <form id="playerEntryForm">
         <div class="form-group">
           <label for="player1Input">Enter Player 1's name</label>
