add styling to jumbotron

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <title>Wheel of Fortune</title>
   </head>
   <body>
-    <div class="container">
+    <div class="jumbotron">
       <h1>Wheel of Fortune!</h1>
+    </div>
+    <div class="container">
       <form id="playerEntryForm">
         <div class="form-group">
           <label for="player1Input">Enter Player 1's name</label>
