--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
         <button class="btn btn-primary" id="spin" type="button" name="button">Spin!</button>
       </div>
 
-      <form id="letterEntryForm">
+      <div id="spinDiv">
         <div class="form-group">
           <label for="letterEntryInput">Enter a letter</label>
           <input type="text" class="form-control" required id="letterEntryInput">
-          <button type="submit" class="btn btn-success">Submit</button>
+          <button id="enterLetter" type="button" class="btn btn-success">Submit</button>
           <button id="solvePuzzle" class="btn btn-primary" type="button" name="button">I'd like to solve the puzzle!</button>
         </div>
-      </form>
+      </div>
     </div>
   </body>
 </html>
