add vowel button

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
           <label for="letterEntryInput">Enter a letter</label>
           <input type="text" class="form-control" required id="letterEntryInput">
           <button id="enterLetter" type="button" class="btn btn-success">Submit</button>
+          <label for="letterEntryInput">Enter A Vowel</label>
+          <input type="text" class="form-control" required id="vowelInput">
+          <button id="vowel" type="button" class="btn btn-success">Submit</button>
           <button id="solvePuzzle" class="btn btn-primary" type="button" name="button">I'd like to solve the puzzle!</button>
         </div>
       </div>
