--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
       </form>
 
       <div class="game-display">
+        <p>Current Spin</p>
+        <p> $ <span id="currentSpin"></span> </p>
         <div class="row">
           <div id=player1Screen class="col-md-6">
             <h2 id="player-one"></h2>
