--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <link rel="stylesheet" href="css/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="css/animate.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="css/mystyles.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="css/mystyles.css" media="screen" title="no title" charset="utf-8">
     <script src="js/jquery-3.1.0.min.js"></script>
     <script src="js/myscripts.js"></script>
@@ -12,11 +14,12 @@
     <div class="jumbotron">
       <h1>Wheel of Fortune!</h1>
     </div>
-    <div id="displayBoard" action="index.html" method="post">
-      <h2>CLUE:</h2>
-      <p id="clue">  </p>
-    </div>
+
     <div class="container">
+      <div id="displayBoard" action="index.html" method="post">
+        <h2>CLUE:</h2>
+        <p id="clue">  </p>
+      </div>
       <form id="playerEntryForm">
         <div class="form-group">
           <label for="player1Input">Enter Player 1's name</label>
@@ -36,7 +39,7 @@
             <h2 id="player-one-score"></h2>
           </div>
           <div id=player1Screen class="col-md-6">
-            <h2 id="player-two" class="selected"></h2>
+            <h2 id="player-two" class="selected "></h2>
             <h2 id="player-two-score"></h2>
           </div>
         </div>
@@ -53,6 +56,22 @@
           <button id="vowel" type="button" class="btn btn-success">Submit</button>
           <button id="solvePuzzle" class="btn btn-primary" type="button" name="button">I'd like to solve the puzzle!</button>
         </div>
+      </div>
+    </div>
+    <div id="playersAvatars">
+      <div id="player1" class="">
+        <img class="podium" src="img/podium1.gif" alt="" />
+        <img class="avatar rocko" src="img/rocko.png" alt="" />
+      </div>
+      <div id="player2" class="">
+        <img class="podium" src="img/podium2.gif" alt="" />
+        <img class="avatar hef" src="img/hef.png" alt="" />
+
+      </div>
+      <div id="player3" class="">
+        <img class="podium" src="img/podium3.gif" alt="" />
+        <img class="avatar spunky" src="img/Spunky.png" alt="" />
+
       </div>
     </div>
   </body>
