--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="game-display">
         <p>Current Spin</p>
         <p> $ <span id="currentSpin"></span> </p>
-        <div class="row">
+        <!-- <div class="row">
           <div id=player1Screen class="col-md-6">
             <h2 id="player-one"></h2>
             <h2 id="player-one-score"></h2>
@@ -42,7 +42,7 @@
             <h2 id="player-two" class="selected "></h2>
             <h2 id="player-two-score"></h2>
           </div>
-        </div>
+        </div> -->
         <button class="btn btn-primary" id="spin" type="button" name="button">Spin!</button>
       </div>
 
@@ -60,10 +60,14 @@
     </div>
     <div id="playersAvatars">
       <div id="player1" class="">
+        <p id="player-one"></p>
+        <p id="player-one-score"></p>
         <img class="podium" src="img/podium1.gif" alt="" />
         <img class="avatar rocko" src="img/rocko.png" alt="" />
       </div>
       <div id="player2" class="">
+        <p id="player-two"></p>
+        <p id="player-one-score"></p>
         <img class="podium" src="img/podium2.gif" alt="" />
         <img class="avatar hef" src="img/hef.png" alt="" />
 
