--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Monofett" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="css/animate.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="css/mystyles.css" media="screen" title="no title" charset="utf-8">
