edit sidebar layout

--- a/index.html
+++ b/index.html
@@ -33,16 +33,6 @@
       <div class="game-display">
         <p>Current Spin</p>
         <p> $ <span id="currentSpin"></span> </p>
-        <!-- <div class="row">
-          <div id=player1Screen class="col-md-6">
-            <h2 id="player-one"></h2>
-            <h2 id="player-one-score"></h2>
-          </div>
-          <div id=player1Screen class="col-md-6">
-            <h2 id="player-two" class="selected "></h2>
-            <h2 id="player-two-score"></h2>
-          </div>
-        </div> -->
         <button class="btn btn-primary" id="spin" type="button" name="button">SPIN</button>
       </div>
 
@@ -73,7 +63,7 @@
           </div>
           <div id="player2" class="">
             <p id="player-two"></p>
-            <p id="player-one-score"></p>
+            <p id="player-two-score"></p>
             <img class="podium" src="img/podium2.gif" alt="" />
             <img class="avatar hef" src="img/hef.png" alt="" />
 
