hide spin and letter divs until submit is clicked

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h1>Wheel of Fortune!</h1>
     </div>
     <div class="col-md-4" id="sidebar">
-      <div class="well">
+      <div class="well" id="playersDiv">
         <form id="playerEntryForm">
           <div class="form-group">
             <label for="player1Input">Enter Player 1's name</label>
@@ -27,7 +27,7 @@
           </div>
         </form>
       </div>
-      <div class="well" id="wellsmith">
+      <div class="well" id="spinDiv">
         <div id="wrongLetters">
           <p>Letters Guessed:</p>
           <p id="lettersGuessed"></p>
@@ -39,7 +39,7 @@
         </div>
       </div>
 
-      <div id="spinDiv">
+      <div id="letterDiv">
         <div class="well">
           <div class="form-group">
             <label for="letterEntryInput">Enter a letter</label>
