add flashing lights to jumbotron

--- a/index.html
+++ b/index.html
@@ -13,6 +13,29 @@
   <body>
 
     <div class="jumbotron">
+      <div id="wrapper">
+
+  <ul id="bottom">
+    <li></li>
+    <li></li>
+    <li></li>
+     <li></li>
+    <li></li>
+     <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+  </ul>
+
+</div>
       <h1>Wheel of Fortune!</h1>
     </div>
     <div class="col-md-4" id="sidebar">
