add arrow to indicate whose turn it is

--- a/index.html
+++ b/index.html
@@ -85,12 +85,14 @@
         <div id="playersAvatars">
           <div id="player1" class="">
             <p id="player-one"></p>
+            <img class="arrows arrow1 initHide" src="img/arrow.gif"/>
             <p id="player-one-score"></p>
             <img class="podium" src="img/podium1.gif" alt="" />
             <img class="avatar rocko" src="img/rocko.png" alt="" />
           </div>
           <div id="player2" class="">
             <p id="player-two"></p>
+              <img class="arrows arrow2 initHide" src="img/arrow.gif"/>
             <p id="player-two-score"></p>
             <img class="podium" src="img/podium2.gif" alt="" />
             <img class="avatar hef" src="img/hef.png" alt="" />
