refactored entire front end with one master function that changes turns and takes both players as arguments interchangeably. optimatl performance so far, still has scoring issues on second round

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
   <head>
     <link href="https://fonts.googleapis.com/css?family=Monofett" rel="stylesheet">
@@ -57,7 +57,7 @@
         </div>
         <div class="game-display">
           <p>Current Spin</p>
-          <p class="scoreGlow"> $ <span id="currentSpin"></span> </p>
+          <p class="scoreGlow"> $  </p>
           <button class="btn btn-primary" id="spin" type="button" name="button">SPIN</button>
         </div>
       </div>
