not return NaN after a bankrupt or lose. game name changes to wheel of misfortune

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </ul>
 
 </div>
-      <h1>Wheel o' Fortune!</h1>
+      <h1>Wheel o' Misfortune!</h1>
     </div>
     <div class="col-md-4" id="sidebar">
       <div class="well" id="playersDiv">
