make it so dollar sign only appears when spin is a number

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <li></li>
     <li></li>
     <li></li>
-     <li></li>
     <li></li>
-     <li></li>
+    <li></li>
+    <li></li>
     <li></li>
     <li></li>
     <li></li>
@@ -57,7 +57,7 @@
         </div>
         <div class="game-display">
           <p>Current Spin</p>
-          <p class="scoreGlow"> $  </p>
+          <p class="scoreGlow"></p>
           <button class="btn btn-primary" id="spin" type="button" name="button">SPIN</button>
         </div>
       </div>
